Added serif font for article styles

--- a/app/main/less/merit.less
+++ b/app/main/less/merit.less
@@ -19,7 +19,9 @@ body, html {
 
 article p {
 	font-size: @font-size-large;
-	.thin;
+	font-family: @font-family-serif;
+	line-height: 1.7;
+	padding-bottom: @padding-base-vertical;
 	.dull;
 }
 
