--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -15,6 +15,7 @@
 		<title>{{ title }} — Creek NHS</title>
 
 		<link rel="stylesheet" type="text/css" href="{% static "css/merit.css" %}">
+		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 		<!-- jQuery -->
 		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
