--- a/app/main/less/variables.less
+++ b/app/main/less/variables.less
@@ -42,7 +42,7 @@
 // -------------------------
 
 @font-family-sans-serif:  Helvetica, Arial, sans-serif;
-@font-family-serif:       Georgia, "Times New Roman", Times, serif;
+@font-family-serif:       "Merriweather", Georgia, "Times New Roman", Times, serif;
 @font-family-monospace:   Monaco, Menlo, Consolas, "Courier New", monospace;
 @font-family-base:        @font-family-sans-serif;
 
