--- a/app/merit/events/templates/includes/rsvp_add.html
+++ b/app/merit/events/templates/includes/rsvp_add.html
@@ -1,5 +1,5 @@
 <a id="rsvp-{{ occurrence.id }}" 
    onclick="Dajaxice.events.add_rsvp(Dajax.process, {'occurrence_id':{{ occurrence.id }}})" 
-   class="btn btn-primary {{ classes }}">
+   class="btn btn-primary btn-rsvp {{ classes }}">
    <span class="glyphicon glyphicon-plus-sign"></span>
 </a>
