--- a/app/merit/events/templates/includes/rsvp_full.html
+++ b/app/merit/events/templates/includes/rsvp_full.html
@@ -1,1 +1,1 @@
-<a class="btn btn-warning disabled {{ classes }}">Full</a>
+<a class="btn btn-warning btn-rsvp disabled {{ classes }}" title="This event is full"><span class="glyphicon glyphicon-warning-sign"></a>
