--- a/app/merit/templates/includes/navbar.html
+++ b/app/merit/templates/includes/navbar.html
@@ -1,6 +1,6 @@
 {% load base_extras %}
 
-<div class="navbar navbar-default navbar-static-top">
+<div class="navbar navbar-inverse navbar-static-top">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-responsive-collapse">
