--- a/app/main/less/merit.less
+++ b/app/main/less/merit.less
@@ -1,6 +1,7 @@
 @import "bootstrap/bootstrap";
 @import "extensions";
 @import "variables";
+@import "buttons";
 
 // Variables
 //-------------------------------
@@ -108,10 +109,6 @@ tbody td {
 	vertical-align: middle!important;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-family: Museo Sans, Avenir, "Helvetica Neue", Arial, sans-serif;
-}
-
 .block {
 	display: block;
 }
@@ -168,13 +165,26 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 30px 0;
 }
 
+.title-col {
+	min-width: 200px;
+}
+
+.calendar-col {
+	max-width: 100px;
+}
+
+.tags-col {
+	width: 20px;
+}
+
 .rsvp-col {
-	max-width: 200px;
+	width: 200px;
 }
 
 .occurrence-map {
 	padding: 0;
 	margin-top: -@navbar-margin-bottom + 1;
+	border-bottom: 1px solid rgba(0,0,0,.3);
 
 	figure {
 		width: 100%;
@@ -183,7 +193,22 @@ h1, h2, h3, h4, h5, h6 {
 	}
 }
 
-.occurrence-title {
+.rsvp-vis {
+	padding: 0;
+	margin-top: -@navbar-margin-bottom + 1;
+
+	figure {
+		width: 100%;
+		height: 300px;
+		padding: 0;
+
+		svg {
+			width: 100%;
+		}
+	}
+}
+
+.button-aligned-title {
 	h2 {
 		position: relative;
 		bottom: -4px;
@@ -197,9 +222,9 @@ footer {
 }
 
 
-@media (max-width: 992px) {
-	table th:nth-child(4),
-	table td:nth-child(4) {
-		display: none;
-	}
-}
+// @media (max-width: 992px) {
+// 	table th:nth-child(4),
+// 	table td:nth-child(4) {
+// 		display: none;
+// 	}
+// }
