--- a/app/merit/events/templates/includes/rsvp_required.html
+++ b/app/merit/events/templates/includes/rsvp_required.html
@@ -1,1 +1,1 @@
-<a href="#" class="btn btn-warning disabled {{ classes }}"><span class="glyphicon glyphicon-warning-sign"></span></a>
+<a href="#" class="btn btn-info btn-rsvp disabled {{ classes }}" title="This event is required."><span class="glyphicon glyphicon-exclamation-sign"></span></a>
