Small changes... hopefull they fix the admin static files

--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -27,7 +27,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 		<!-- Ajax -->
-		{% dajaxice_js_import %}
+		<script src="{% static "/static/dajaxice/dajaxice.core.js" %}"></script>
 		<script src="{% static "/static/dajax/jquery.dajax.core.js" %}"></script>
 		<script src="{% static "js/ajax.js" %}"></script>
 
