--- a/app/merit/templates/includes/navbar.html
+++ b/app/merit/templates/includes/navbar.html
@@ -17,14 +17,14 @@
                 <li class="{% navactive request 'merit-home' %}"><a href="{% url 'merit-home' %}">Home</a></li>
                 <li class="{% navactive request 'merit-occurrences' %}"><a href="{% url 'merit-occurrences' %}">Events</a></li>
                 <li class="{% navactive request 'merit-rsvps' %}"><a href="{% url 'merit-rsvps' %}">RSVPs</a></li>
-                <li><a href="stats">Stats</a></li>
+                <li class="{% navactive request 'merit-stats' %}"><a href="{% url 'merit-stats' %}">Stats</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 {% if request.user.is_superuser %}
-                <li><a href="{% url 'admin:index' %}"><span class="glyphicon glyphicon-edit hidden-xs" data-toggle="tooltip" data-placement="bottom" title="Admin"></span> <span class="visible-xs">Admin</span></a></li>
+                <li><a href="{% url 'admin:index' %}"><span class="glyphicon glyphicon-edit hidden-xs"></span> <span class="visible-xs">Admin</span></a></li>
                 {% endif %}
-                <li><a href="#"><span class="glyphicon glyphicon-cog hidden-xs" data-toggle="tooltip" data-placement="bottom" title="Settings"></span> <span class="visible-xs">Settings</span></a></li>
-                <li><a href="#"><span class="glyphicon glyphicon-off hidden-xs" data-toggle="tooltip" data-placement="bottom" title="Log&nbsp;out"></span> <span class="visible-xs">Log out</span></a></li>
+                <li><a href="#"><span class="glyphicon glyphicon-cog hidden-xs"></span> <span class="visible-xs">Settings</span></a></li>
+                <li><a href="{% url 'merit-logout' %}"><span class="glyphicon glyphicon-off hidden-xs"></span> <span class="visible-xs">Log out</span></a></li>
             </ul>
         </div>
     </div>
