--- a/app/merit/templates/merit/index.html
+++ b/app/merit/templates/merit/index.html
@@ -1,36 +1,49 @@
 {% extends "base_page.html" %}
 
+{% load markup attachments_tags %}
+
 {% block title %}Announcements{% endblock title %}
 {% block body_id %}home{% endblock body_id %}
 
 {% block content %}
+{% for announcement in announcements %}
+{% get_attachments_for announcement as "attachments_list" %}
 <section class="tile">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<h2 class="center thick dull">Announcements</h2>
+			<div class="col-sm-7 col-md-offset-2 button-aligned-title">
+				<h2 class="thick">{{ announcement.title }}</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-2">
+				<span class="text-muted">posted by</span> <span class="muted">{{ announcement.author.get_full_name }}</span> <span class="text-muted">on</span> <span class="muted">{{ announcement.published|date }}</span>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-12">
 				<hr>
 			</div>
-			<article class="col-md-5 col-md-offset-2">
-				<span class="muted pull-right">August 8th, 2013</span>
-				<h3>Hello world</h3>
-				<p>Each spring, there is an application process for the admission of new members. In order to be eligible for membership during the 2013-14 school year, students must maintain a weighted cumulative GPA of 3.65. </p>
-				<p>Students are chosen for membership based on an application process that evaluates qualities of scholarship, character, leadership, and service. Once admitted, Cherry Creek NHS members are expected to uphold the highest standards of excellence, to contribute 16 hours of tutoring and community service each semester, attend club meetings, and participate in NHS-sponsored events. Additional information about expectations and activities can be found in the CCHS NHS Agreement.</p>
+		</div>
+		<div class="row">
+			<article class="col-md-6 col-md-offset-2">
+				{{ announcement.content_html }}
+				<br><br>
+				<p class="center muted hidden-xs hidden-sm">. . .</p>
+				<hr class="visible-xs visible-sm">
 			</article>
+			{% if attachments_list %}
 			<div class="col-md-3">
 				<h5 class="thick muted">Attachments</h5>
 				<div class="list-group">
-					<a href="#" class="list-group-item">
-						<span class="badge">3.2 Mb</span>
-						NHS Application.pdf
-					</a>
-					<a href="#" class="list-group-item">
-						<span class="badge">2.7 Mb</span>
-						Welcome Letter.pdf
-					</a>
+					{% for attachment in attachments_list %}
+						<a href="{{ attachment.attachment_file.url }}" class="list-group-item">{{ attachment.filename }} {{ attachment.attachment_file.size }}</a>
+					{% endfor %}
 				</div>
 			</div>
+			{% endif %}
 		</div>
 	</div>
 </section>
+{% endfor %}
 {% endblock content %}
