--- a/app/main/less/merit.less
+++ b/app/main/less/merit.less
@@ -15,15 +15,20 @@
 body, html {
 	height: 100%;
 	-webkit-font-smoothing: antialiased;
+	background: @gray-base;
 	// font-weight: 100;
 }
 
-article p {
+article {
 	font-size: @font-size-large;
 	font-family: @font-family-serif;
 	line-height: 1.7;
 	padding-bottom: @padding-base-vertical;
 	.dull;
+}
+
+header+.tile {
+	padding-top: @line-height-computed;
 }
 
 .big {
@@ -62,7 +67,7 @@ article p {
 	color: @gray;
 }
 
-.inverted {
+.tile.inverted {
 	background: #39474C;
 
 	color: #fff;
@@ -103,6 +108,10 @@ table td:nth-child(4) {
 hr {
 	margin: 40px 0;
 	border-top: 1px solid rgba(0,0,0,.1);
+
+	&.light {
+		border-color: @gray;
+	}
 }
 
 tbody td {
@@ -162,6 +171,7 @@ tbody td {
 }
 
 .tile {
+	background: white;
 	padding: 30px 0;
 }
 
@@ -182,9 +192,9 @@ tbody td {
 }
 
 .occurrence-map {
-	padding: 0;
+	padding: 0 !important;
 	margin-top: -@navbar-margin-bottom + 1;
-	border-bottom: 1px solid rgba(0,0,0,.3);
+	border-bottom: 2px solid @gray-light;
 
 	figure {
 		width: 100%;
@@ -215,16 +225,44 @@ tbody td {
 	}
 }
 
+#login .tile {
+	position: relative;
+	top: 50%;
+	margin-top: -240px;
+}
+
+#login {
+	input[type="text"], input[type="password"] {
+		background: @header-background-color;
+		padding: 30px 15px;
+		border: 2px solid rgba(0,0,0,0);
+
+		&:focus {
+			box-shadow: none;
+			border: 2px solid @brand-info;
+		}
+	}
+
+	label {
+		padding-top: 18px;
+	}
+}
+
 // Footer
 //-------------------------------
 
 footer {
+
 }
 
 
-// @media (max-width: 992px) {
-// 	table th:nth-child(4),
-// 	table td:nth-child(4) {
-// 		display: none;
-// 	}
-// }
+@media (max-width: @screen-md) {
+	#login .tile {
+		position: static;
+		margin: 0;
+	}
+
+	#login label {
+		padding-bottom: @padding-large-vertical;
+	}
+}
