--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -29,7 +29,7 @@
 	                <li><a href="#">Board</a></li>
 	            </ul>
 	            
-	            <a href="#" class="btn btn-on-black btn-primary navbar-btn pull-right">Sign in</a>
+	            <a href="{% url 'merit-login' %}" class="btn btn-on-black btn-primary navbar-btn pull-right">Sign in</a>
 	        </div>
 	  	</div>
 	</div>
@@ -43,7 +43,7 @@
 		</div>
 		<div class="big-sign-in row">
 			<div class="col-md-3 col-md-offset-3">
-				<a href="login.html" class="btn btn-block btn-primary btn-large">Sign in</a>
+				<a href="{% url 'merit-login' %}" class="btn btn-block btn-primary btn-large">Sign in</a>
 			</div>
 			<div class="col-md-3">
 				<a href="#" class="btn-on-black btn btn-info btn-block btn-large">Not a member?</a>
