--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -66,8 +66,9 @@
 				<img src="{% static "images/robabay.jpg" %}" class="img-circle img-responsive" alt="">
 			</div>
 			<div class="col-md-5">
-				<h3 class="thin">Something special</h3>
-				<p class="dull thin">
+				<div class="quick-space hidden-sm hidden-xs"><br><br><br><br></div>
+				<h3 class="">Something special</h3>
+				<p class="dull thin text-large">
 					National Honor Society is a nationally recognized organization that commends students for outstanding scholarship, citizenship, service, and character. Cherry Creek NHS members participate in a wide variety of tutoring and community service opportunities in the school and community.
 				</p>
 			</div>
@@ -87,7 +88,8 @@
 				<hr>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<p class="thin">We want to reward the hard work and diligence students have devoted to their academic careers. We also want to build a community of the most talented and motivated minds at Creek. To achieve these goals, we use a three-step application process to find the students we think best align with our values.</p>
+				<div class="quick-space hidden-sm hidden-xs"><br><br></div>
+				<p class="thin text-large">We want to reward the hard work and diligence students have devoted to their academic careers. We also want to build a community of the most talented and motivated minds at Creek. To achieve these goals, we use a three-step application process to find the students we think best align with our values.</p>
 			</div>
 			<div class="col-md-6">
 				<h4 class="center thick dull">The Process</h4>
