--- a/app/merit/templates/base_page.html
+++ b/app/merit/templates/base_page.html
@@ -12,8 +12,11 @@
 <footer class="tile inverted">
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-6">
-				<h5>&copy; <span class="thick">2013 National Honor Society</span> <span class="thin">at Cherry Creek High School</span></h5>
+			{% block footer_logo %}
+				<div class="col-md-1 right"><img src="{% static "img/nhs-logo-on-black.svg" %}" class="logo" alt=""></div>
+			{% endblock footer_logo %}
+			<div class="col-md-6">
+				<h5>&copy; <span class="thick">2013 National Honor Society</span> <br><br><span class="thin">at Cherry Creek High School</span></h5>
 			</div>
 		</div>
 	</div>
