--- a/app/merit/templates/merit/change_password_done.html
+++ b/app/merit/templates/merit/change_password_done.html
@@ -2,9 +2,9 @@
 
 {% load bootstrap3 %}
 
-{% block title %}Logged out{% endblock title %}
+{% block title %}Password changed{% endblock title %}
 
-{% block body_id %}logged-out{% endblock body_id %}
+{% block body_id %}password{% endblock body_id %}
 
 {% block base_content %}
 <section class="tile inverted">
@@ -13,8 +13,8 @@
 			<div class="col-md-6 col-md-offset-2">
 				<div class="row">
 					<div class="col-md-10">
-						<h2 class="thick">You have logged out.</h2>
-						<h3 class="thin muted">Thanks for stopping by!</h3>
+						<h2 class="thick">Password changed</h2>
+						<h3 class="thin muted">Excellent work!</h3>
 					</div>
 				</div>
 				<div class="row">
@@ -26,8 +26,7 @@
 					<div class="col-md-12">
 						<br>
 						<div class="btn-group btn-group-justified">
-							<a href="{% url 'merit-login' %}" class="btn btn-on-black btn-primary btn-big">Sign back in</a>
-							<a href="{% url 'home' %}" class="btn btn-on-black btn-dark btn-big">Go home &nbsp;<span class="glyphicon glyphicon-circle-arrow-right"></span></a>
+							<a href="{% url 'merit-home' %}" class="btn btn-thick btn-on-black btn-dark btn-big">Go home &nbsp;<span class="glyphicon glyphicon-circle-arrow-right"></span></a>
 						</div>
 					</div>
 				</div>
