--- a/app/merit/templates/merit/rsvps.html
+++ b/app/merit/templates/merit/rsvps.html
@@ -28,8 +28,8 @@
 			<div class="col-sm-3 hidden-xs">
 				<br>
 				<div class="btn-group btn-group-justified">
-					<a href="#" class="btn btn-dark btn-lg"><span class="glyphicon glyphicon-print"></span></a>
-					<a href="#" class="btn btn-lg btn-default"><span class="glyphicon glyphicon-file"></span></a>
+					<span class="btn btn-dark btn-lg disabled"><span class="glyphicon glyphicon-print"></span></span>
+					<a href="{% url 'merit-blank-sheet' %}" class="btn btn-lg btn-default" title="Print blank sheet"><span class="glyphicon glyphicon-file"></span></a>
 				</div>
 			</div>
 		</div>
