--- a/app/main/less/bootstrap/print.less
+++ b/app/main/less/bootstrap/print.less
@@ -17,13 +17,13 @@
     text-decoration: underline;
   }
 
-  a[href]:after {
-    content: " (" attr(href) ")";
-  }
+  // a[href]:after {
+  //   content: " (" attr(href) ")";
+  // }
 
-  abbr[title]:after {
-    content: " (" attr(title) ")";
-  }
+  // abbr[title]:after {
+  //   content: " (" attr(title) ")";
+  // }
 
   // Don't show links for images, or javascript/internal links
   .ir a:after,
