--- a/app/main/less/extensions.less
+++ b/app/main/less/extensions.less
@@ -67,3 +67,13 @@
   position: relative;
   bottom: -1px;
 }
+
+@media print {
+  .hidden-print {
+    display: none;
+  }
+
+  article {
+    font-size: @font-size-base !important;
+  }
+}
