fixed RSVP duration display, removed application process and button

--- a/app/main/templates/index.html
+++ b/app/main/templates/index.html
@@ -31,7 +31,7 @@
 				<a href="{% url 'merit-login' %}" class="btn btn-block btn-primary btn-large">Sign in</a>
 			</div>
 			<div class="col-md-3">
-				<a href="/about/" class="btn-on-black btn btn-info btn-block btn-large">Not a member?</a>
+				<a href="http://creeknhs.weebly.com/" class="btn-on-black btn btn-info btn-block btn-large" title="I am so sorry you have to go to this site :(">Not a member?</a>
 			</div>
 		</div>
 		{% endif %}
@@ -61,60 +61,7 @@
 		</div>
 	</div>
 </section>
-<section class="tile tinted">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<h3 class="center thick dull">
-					Rewarding excellence
-				</h3>
-				<h4 class="center thin dull">
-					
-				</h4>
-				<hr>
-			</div>
-			<div class="col-md-5 col-md-offset-1">
-				<div class="quick-space hidden-sm hidden-xs"><br><br></div>
-				<p class="thin text-large">We want to reward the hard work and diligence students have devoted to their academic careers. We also want to build a community of the most talented and motivated minds at Creek. To achieve these goals, we use a three-step application process to find the students we think best align with our values.</p>
-			</div>
-			<div class="col-md-6">
-				<h4 class="center thick dull">The Process</h4>
-			</div>
-			<div class="col-md-6">
-				<div class="col-md-4">
-					<h3 class="thin"><span class="label label-info">1</span> <small class="dull">Invitation</small></h3 class="thin">
-					<p class="muted small">
-						Qualifying students are invited to apply for the next year's NHS chapter typically about a month into the second semester.
-					</p>
-				</div>
-				<div class="col-md-4">
-					<h3 class="thin"><span class="label label-info">2</span> <small class="dull">Application</small></h3 class="thin">
-					<p class="muted small">
-						In order to be considered for induction into the society, invitees must submit an application answering a short essay prompt and a few questions.
-					</p>
-				</div>
-				<div class="col-md-4">
-					<h3 class="thin"><span class="label label-info">3</span> <small class="dull">Selection</small></h3 class="thin">
-						<p class="muted small">
-							Once applications are submitted, the <a href="#">executive board</a> will read through each application before selecting a handful of welcome inductees.
-						</p>
-				</div>
-			</div>
-		</div>
-		<div class="row">
-			<div class="col-md-6 col-md-offset-3">
-				<hr>
-			</div>
-			<div class="col-md-5 col-md-offset-1">
-				<p class="">Applications for the <strong>2014-2015</strong> chapter <strong>have not started</strong>. <br>
-					Please check back soon.</p>
-			</div>
-			<div class="col-md-4">
-					<a href="#" class="btn btn-warning disabled btn-block btn-big">Apply today <span class="glyphicon glyphicon-arrow-right"></span></a>
-			</div>
-		</div>
-	</div>
-</section>
+
 <footer class="tile inverted">
 	<div class="container">
 		<div class="row">
