--- a/app/main/templates/base.html
+++ b/app/main/templates/base.html
@@ -18,10 +18,10 @@
 		<link href='http://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic' rel='stylesheet' type='text/css'>
 
 		<!-- jQuery -->
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+		<script src="{% static "js/jquery.min.js" %}"></script>
 
 		<!-- Bootstrap -->
-		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+		<script src="{% static "js/bootstrap.min.js" %}"></script>
 
 		<!-- Mobile settings -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
